# scoutpip

./: .gitignore  README.md  REQUIREMENTS.txt  pyproject.toml
chains/: tes1.h5  test.h5
notebooks/: example_notebook.ipynb  exaple_notebook.ipynb
src/scoutpip/: analysis_tools.py  dipole_utilities.py
utilities/: analysis_tools.py  dipole_utilities.py
